--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MC Tools</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <title>ByteFlipper</title>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfGFykqAAAAADwRSncVX7CPbVyB_TdOeHcgn-d9"></script>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.2/uicons-regular-rounded/css/uicons-regular-rounded.css'>
   </head>
   <body>
