--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ByteFlipper</title>
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfGFykqAAAAADwRSncVX7CPbVyB_TdOeHcgn-d9"></script>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.2/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <meta name="google-site-verification" content="uv3Y30Ng0IxihVTEaUQNWP_KevZz41Ef0od937BzcVo" />
   </head>
   <body>
     <div id="app"></div>
