Added page for: EverBook

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="https://www.google.com/recaptcha/enterprise.js?render=6LfGFykqAAAAADwRSncVX7CPbVyB_TdOeHcgn-d9"></script>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.4.2/uicons-regular-rounded/css/uicons-regular-rounded.css'>
     <meta name="google-site-verification" content="uv3Y30Ng0IxihVTEaUQNWP_KevZz41Ef0od937BzcVo" />
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="ByteFlipper" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="app"></div>
